# pythrift

./: README.md  pyproject.toml
pythrift/: thrift.py
